Fix excess body padding on smaller screens
Change from navbar fixed to default and remove the padding from the
body.

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -1,9 +1,5 @@
 $margin: 10px;
 
-body { 
-  padding-top: 60px;
-}
-
 footer {
   height: 100px;
 }
@@ -12,7 +8,7 @@ h1 {
   margin-bottom: $margin * 2;
 }
 
-.buttons { 
+.buttons {
   margin-top: $margin * 2;
 }
 
